--- a/money-for-rabbit/package.json
+++ b/money-for-rabbit/package.json
@@ -17,6 +17,7 @@
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
+  "homepage": "https://money-for-rabbit.netlify.app/",
   "eslintConfig": {
     "extends": [
       "react-app",
